fix overflow

--- a/style.css
+++ b/style.css
@@ -130,7 +130,6 @@ main > div {
   width: 100%;
   padding: 0;
   padding-top: 32px;
-  overflow: scroll;
 }
 
 #result {
